tests/models/snapshots/can_get_or_create_settings.snap
---
source: tests/models/site_settings.rs
expression: settings
---
Model {
    created_at: DATE,
    updated_at: DATE,
    id: ID
    site_url: "http://localhost:5150",
}
